module.jai


// Audio related functions
InitAudioDevice    :: ()  #foreign raylib;
CloseAudioDevice   :: ()  #foreign raylib;
IsAudioDeviceReady :: () -> bool #foreign raylib;
LoadWave           :: (fileName: *u8) -> Wave #foreign raylib;
LoadSound          :: (fileName: *u8) -> Sound #foreign raylib;
LoadSoundFromWave  :: (wave: Wave) -> Sound #foreign raylib;
UpdateSound        :: (sound: Sound, data: *void, samplesCount: s32)  #foreign raylib;
UnloadWave         :: (wave: Wave)  #foreign raylib;
UnloadSound        :: (sound: Sound)  #foreign raylib;
PlaySoundMulti     :: (sound: Sound)  #foreign raylib;
StopSoundMulti     :: ()  #foreign raylib;
GetSoundsPlaying   :: () -> s32 #foreign raylib;
IsSoundPlaying     :: (sound: Sound) -> bool #foreign raylib;
SetSoundVolume     :: (sound: Sound, volume: float)  #foreign raylib;
SetSoundPitch      :: (sound: Sound, pitch: float)  #foreign raylib;
PlaySound          :: (sound: Sound)  #foreign raylib;
StopSound          :: (sound: Sound)  #foreign raylib;
PauseSound         :: (sound: Sound)  #foreign raylib;
ResumeSound        :: (sound: Sound)  #foreign raylib;

Wave :: struct {
    sampleCount: u32;
    sampleRate: u32;
    sampleSize: u32;
    channels: u32;
    data: *void;
}

AudioStream :: struct {
    sampleRate: u32;
    sampleSize: u32;
    channels: u32;
    buffer: *rAudioBuffer;
}

Sound :: struct {
    sampleCount: u32;
    stream: AudioStream;
}

rAudioBuffer :: struct { /* only used as a pointer in this header */ }

#scope_file
Math       :: #import "Math";
Vector2    :: Math.Vector2;
Vector3    :: Math.Vector3;
Vector4    :: Math.Vector4;
Matrix     :: Math.Matrix4;
Quaternion :: Math.Quaternion;

#scope_export
#if OS == .WINDOWS {
    raylib :: #foreign_library "win/raylib";
} else #if OS == .LINUX {
} else #if OS = .MACOS {
}
